@@ -11,22 +11,15 @@ subprojects {
     }
 
     java {
-        sourceCompatibility = JavaVersion.VERSION_11
-        targetCompatibility = JavaVersion.VERSION_11
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
     }
 
-    // These arguments are required because of the JVM 11's module system -
-    // we grant this module access to the packages from the Truffle API JAR
     test {
         useJUnitPlatform()
 
         jvmArgs '-ea',
-                '--add-exports',
-                    'org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED',
-                '--add-exports',
-                    'org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED',
-                '--add-exports',
-                    'org.graalvm.truffle/com.oracle.truffle.api.staticobject=ALL-UNNAMED'
+                '--enable-native-access=ALL-UNNAMED'
 
         testLogging {
             events 'failed'
@@ -35,14 +28,16 @@ subprojects {
     }
 
     ext {
-        graal_version = '22.3.0'
-        antlr_version = '4.9.2'
+        graal_version = '25.3.4.1'
+        antlr_version = '4.13.2'
     }
 
     dependencies {
         implementation "org.graalvm.truffle:truffle-api:$graal_version"
         annotationProcessor "org.graalvm.truffle:truffle-dsl-processor:$graal_version"
+        testRuntimeOnly "org.graalvm.truffle:truffle-runtime:$graal_version"
 
         testImplementation "org.junit.jupiter:junit-jupiter:5.9.3"
+        testRuntimeOnly "org.junit.platform:junit-platform-launcher"
     }
 }
